Fix layout issues

--- a/src/controllers/menu/menu.scss
+++ b/src/controllers/menu/menu.scss
@@ -5,7 +5,6 @@
 }
 
 .menu-layout-instructions {
-  -webkit-flex: 1 0 auto;
 }
 
 .menu-layout-form {
